--- a/chiara/index.html
+++ b/chiara/index.html
@@ -1,3 +1,13 @@
 <!DOCTYPE html>
-<p>sono un paragrafo</p>
-<p>aggiunto</p>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina HTML di Chiara</title>
+</head>
+<body>
+        <h1>Benvenuti</h1>
+        <p>Sono Chiara D'Ambrosio, ho 26 anni e vivo in Toscana</p>
+        <h2>Ho studiato programmazione web</h2>
+</body>
+</html>
