--- a/federico/index.html
+++ b/federico/index.html
@@ -1,3 +1,10 @@
 <!DOCTYPE html>
-<p>sono un paragrafo</p>
-<p>gs</p>
+<head>
+<header>Pagina html di federico barghini</header>
+</head>
+
+<body>
+    <h1>Ciao a tutti benvenuti sulla mia pagina web html</h1>
+    <p>Ciao sono federico ho 20 anni sono di Lucca </p>
+    <h2>sto studiando programazzione web</h2>
+</body>
