aggiunta su index.html

--- a/niko/index.html
+++ b/niko/index.html
@@ -1,3 +1,19 @@
 <!DOCTYPE html>
-<p>sono un paragrafo</p>
-<p>aggiunto</p>
+<html lang="it">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Pagina HTML di Niko</title>
+    </head>
+    <body>
+        <dir>
+            <h1>Benvenuto!</h1>
+        </dir>
+        <dir>
+            <p>Mi chiamo Niko Fanucchi, ho 23 anni e vivo a Capannori (LU).</p>
+            <h2>Sto studiando programmazione web.</h2>
+        </dir>
+        <footer>
+            <p>Ultima modifica effettuata il 11/02/2025 alle 17:43</p>
+        </footer>
+    </body>
+</html>
