--- a/paolo/index.html
+++ b/paolo/index.html
@@ -51,28 +51,22 @@
     <section>
         <div class="container">
             <h1>Benvenuto!</h1>
-            <p>Questa è una pagina di esempio per illustrare i vari tag HTML.</p>
+            <p>Per fare questo esercizio potete usare Google o i vostri compagni.</p>
             
             <h2>Tag Principali:</h2>
             <ul>
-                <li><strong>&lt;h1&gt; - &lt;h6&gt;</strong>: Intestazioni di diversi livelli</li>
-                <li><strong>&lt;p&gt;</strong>: Paragrafo</li>
-                <li><strong>&lt;a&gt;</strong>: Collegamento ipertestuale</li>
-                <li><strong>&lt;img&gt;</strong>: Immagine</li>
-                <li><strong>&lt;ul&gt;, &lt;ol&gt;, &lt;li&gt;</strong>: Liste non ordinate e ordinate</li>
-                <li><strong>&lt;table&gt;</strong>: Tabelle</li>
-                <li><strong>&lt;div&gt;</strong>: Contenitore generico</li>
-                <li><strong>&lt;span&gt;</strong>: Contenitore inline</li>
+                <li>Pagina html vostra</li>
+                <li>Head con un titolo che è in questo formato "Pagina HTML di vostronome"</li>
+                <li>un body con all' interno</li>
+                <ul>
+                    <li>un titolo di benvenuto</li>
+                    <li>un paragrafo con una vostra breve bio</li>
+                    <li>un titolo secondario con scritto "sto studiando programmazione web" </li>
+                </ul>
             </ul>
-
-            <h2>Esempio di Collegamento</h2>
-            <p>Visita <a href="https://www.google.com" target="_blank">Google</a> per una ricerca.</p>
-
-            <h2>Esempio di Immagine</h2>
-            <img src="https://via.placeholder.com/300" alt="Esempio di immagine">
         </div>
     </section>
-    
+
     <footer>
         &copy; 2025 - Pagina di esempio per HTML
     </footer>
