Modificato completamente index e aggiunto pagina Animali

--- a/chiara/index.html
+++ b/chiara/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina HTML di Chiara</title>
+
 </head>
+
 <body>
-        <h1>Benvenuti</h1>
-        <p>Sono Chiara D'Ambrosio, ho 26 anni e vivo in Toscana</p>
-        <h2>Ho studiato programmazione web</h2>
+    <header>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="Animali.html">Animali</a>
+        </nav>
+
+        <hr />
+
+    </header>
+
+    <h1>Benvenuti</h1>
+    <h3>Questa è la pagina test di Chiara</h3>
+    <img src="Chiara.jpg" alt="Chiara" width="200" height="250">
+    <br/>
+    <br/>
+    
+    <h2>Chi sono</h2>
+
+    <p>
+        Sono Chiara D'Ambrosio, ho 26 anni e vivo in Toscana, nella vita ho fatto molti "errori di percorso" trovandomi
+        a dover studiare cose che non mi piacevano solo per fare contente le persone che mi stavano attorno, ma adesso
+        voglio capire cosa mi piace davvero.
+    </p>
+
+    <h2>Programmazione web</h2>
+
+    <p>
+        Dal 03/02/2025 ho iniziato a studiare programmazione partecipando al corso "Programmare un software da zero". 
+        Attualmente mi sento di dire che questo è un mondo in cui mi piacerebbe lavorare.
+    </p>
+
+    <footer>
+        
+        <br/>
+        <br/>
+        <hr />
+        <p>Vi ricordo che questa pagina è solo un test</p>
+
+    </footer>
+
 </body>
+
 </html>
