Modificata posizione footer in entrambe le pagine

--- a/chiara/Animali.html
+++ b/chiara/Animali.html
@@ -27,10 +27,8 @@
     <p>Ho un cane di nome Pluto, eccolo:</p>
     <img src="Pluto.webp" alt="Pluto" width="200" height="250">
 
-    <footer>
+    <footer style="bottom: 0; width: 100%; text-align: center">   
 
-        <br/>
-        <br/>
         <hr/>
         <p>Vi ricordo che questa pagina è solo un test</p>
 
