--- a/alfred/index.html
+++ b/alfred/index.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
-<p>sono un paragrafo</p>
-<p>aggiunto</p>
+
+<h1>Pagina HTML di Alfred</h1>
+    <head>Ciao utente sei nel mio sito</head>
+    </h1> <br>
+   <h1>Breve biografia</h1>
+    <body>
+        Ciao mi chiamo Alfred
+    </body>
