work in progress

--- a/chiara/index.html
+++ b/chiara/index.html
@@ -7,6 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina HTML di Chiara</title>
 
+    <style>
+        .testo {
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+        }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -34,9 +47,10 @@
     
 </section>
 
-<section>
+<section chisono>
+    <div class="testo">
 
-    <h2 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Chi sono</h2>
+    <h2>Chi sono</h2>
 
     <p>
         Sono Chiara D'Ambrosio, ho 26 anni e vivo in Toscana, nella vita ho fatto molti "errori di percorso" trovandomi
@@ -47,22 +61,23 @@
     <br/>
     <br/>
 
-</section>
+</section chisono>
 
-<section>
-    
-    <h2 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Programmazione web</h2>
+<section programmazione>
+    <div class="testo">
+
+    <h2>Programmazione web</h2>
 
     <p>
-        Dal 03/02/2025 ho iniziato a studiare programmazione partecipando al corso "Programmare un software da zero". 
+        Dal 03/02/2025 ho iniziato a studiare programmazione partecipando al corso "Programmare un software da zero".
         Attualmente mi sento di dire che questo è un mondo in cui mi piacerebbe lavorare.
     </p>
 
-</section>
+</section programmazione>
 
-    <footer style="bottom: 0; width: 100%; text-align: center;">
+    <footer style="bottom: 0; width: 100%; text-align: center">
 
-        <hr />
+        <hr/>
         <p>Vi ricordo che questa pagina è solo un test</p>
 
     </footer>
