--- a/chiara/Animali.html
+++ b/chiara/Animali.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animali</title>
+    <link rel="stylesheet" href="./styles.css">
+
 
 </head>
 
