--- a/chiara/index.html
+++ b/chiara/index.html
@@ -6,19 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina HTML di Chiara</title>
-
-    <style>
-        .testo {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-        }
-
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 
