--- a/alfred/index.html
+++ b/alfred/index.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 
-<h1>Pagina HTML di Alfred</h1>
-    <head>Ciao utente sei nel mio sito</head>
-    </h1> <br>
-   <h1>Breve biografia</h1>
-    <body>
-        Ciao mi chiamo Alfred
-    </body>
+<html>
+<head>
+<style>
+.title {
+  background-color: rgb(160, 0, 5);
+  color: white;
+  padding: 30px;
+}
+.footer {
+  background-color: #757575;
+  padding: 20px;
+  text-align: center;}
+
+  </style>
+</head>
+<body>
+
+<h1 class="title">Pagina HTML di Alfred</h1>
+<p>Ciao utente sei sul mio sito.</p>
+
+<h2 class="title">Biografia</h2>
+<p>Ciao mi chiamo Alfred e ho 21 anni.</p>
+
+<h2 class="title">altro</h2>
+<p>Sto studiando programmazione</p>
+
+</body>
+</html>
+
+<div class="footer">
+    <p>Fine pagina</p>
