--- a/federico/index.html
+++ b/federico/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <head>
-<header>Pagina html di federico barghini</header>
+<title>Pagina html di federico barghini</title>
+
+<style>text-aling:center</style>
+
 </head>
 
-<body>
+<body style="background-color: darkgoldenrod;">
+<div class="container">
+    
     <h1>Ciao a tutti benvenuti sulla mia pagina web html</h1>
     <p>Ciao sono federico ho 20 anni sono di Lucca </p>
     <h2>sto studiando programazzione web</h2>
+    
+</div> 
+
 </body>
