--- a/emanuele/index.html
+++ b/emanuele/index.html
@@ -5,4 +5,4 @@
 Pagina Html di nannizziemanuele
 <body<benvenuti nel sito di emanuele in cui si parla di auto></body>
 <body<Sono un appassionato di auto e mi piace condividere la mia collezione con il mondo del modellismo e delle vendite>
-<body"Sto studiando programmazione web"
+<body"Sto studiando programmazione web
