--- a/samuel/index.html
+++ b/samuel/index.html
@@ -1,1 +1,19 @@
-ciao
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Samuel</title>
+</head>
+<body>
+    
+</body>
+<h1>Ciao</h1>
+<h2>Ciao sono Samuel </h2>
+<h3>Ciao stò seguendo un corso di programmazione</h3>
+<body bgcolor="00ff00
+">
+
+    
+</body>
+</html>
