--- a/niko/index.html
+++ b/niko/index.html
@@ -3,17 +3,38 @@
     <head>
         <meta charset="UTF-8" />
         <title>Pagina HTML di Niko</title>
+        <style>
+            div {
+                text-align: center;
+                background-color:rgba(130, 255, 130, 0.75);
+                border-radius: 20px;
+                max-width: 400px;
+                margin: auto;
+            }
+
+            footer {
+                text-align: center;
+            }
+            img {
+                text-align: center;
+                border-radius: 50%;
+            }
+            p {
+                font-size: 125%;
+            }
+        </style>
     </head>
     <body>
-        <dir>
+        <div>
             <h1>Benvenuto!</h1>
-        </dir>
-        <dir>
+        </div>
+        <div>
+            <img src="immagineProfilo.jpg">
             <p>Mi chiamo Niko Fanucchi, ho 23 anni e vivo a Capannori (LU).</p>
             <h2>Sto studiando programmazione web.</h2>
-        </dir>
+        </div>
         <footer>
-            <p>Ultima modifica effettuata il 11/02/2025 alle 17:43</p>
+            <p>Ultima modifica effettuata il 14/02/2025 alle 17:44</p>
         </footer>
     </body>
 </html>
