--- a/imen/index.html
+++ b/imen/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <H1>ciao</H1>
-    <p>mi piace viaggiare</p>
+    <p>mi piace viaggiare!</p>
     <h2>sto studiando programmazione web</h2>
 </body>
 </html>
