--- a/alfred/index.html
+++ b/alfred/index.html
@@ -21,9 +21,9 @@
 <p>Ciao utente sei sul mio sito.</p>
 
 <h2 class="title">Biografia</h2>
-<p>Ciao mi chiamo Alfred e ho 21 anni.</p>
+<p>Mi chiamo Alfred e ho 21 anni.</p>
 
-<h2 class="title">altro</h2>
+<h2 class="title">altro...</h2>
 <p>Sto studiando programmazione</p>
 
 </body>
@@ -31,3 +31,4 @@
 
 <div class="footer">
     <p>Fine pagina</p>
+
