--- a/samuel/index.html
+++ b/samuel/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +9,15 @@
 </body>
 <h1>Ciao</h1>
 <h2>Ciao sono Samuel </h2>
-<h3>Ciao stò seguendo un corso di programmazione</h3>
-<body bgcolor="00ff00
+<h3>Ciao sto seguendo un corso di programmazione</h3>
+<body style="background-color: lime;"
 ">
 
     
 </body>
 </html>
+<table width="542" align="center" style="background-color: black ;" border="0"><tbody>
+<tr>
+<td width="540" style="background-color: orangered;">Ciao a tutti</td>
+</tr>
+</tbody></table>
