--- a/paolo/cv-1/cv.html
+++ b/paolo/cv-1/cv.html
@@ -9,7 +9,7 @@
 <body>
     <div class="resume-container">
         <div class="header">
-            <img src="profile.jpg" alt="Emmy Alexander" class="profile-img">
+            <img src="profile.jpg" alt="Paolo Micheletti" class="profile-img">
             <div class="header-text">
                 <h1>Paolo Micheletti</h1>
                 <h2>Web Developer</h2>
