--- a/imen/index.html
+++ b/imen/index.html
@@ -6,8 +6,7 @@
     <title>Pagina HTML di IMEN</title>
 </head>
 <body>
-    <H1>ciao</H1>
-    <p>mi piace viaggiare!</p>
+    <H1>ciao </H1>
+    <p>mi piace viaggiare</p>
     <h2>sto studiando programmazione web</h2>
 </body>
-</html>
