aggiunto file style.css e cv.html

--- a/niko/index.html
+++ b/niko/index.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html lang="it">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Pagina HTML di Niko</title>
-        <style>
-            div {
-                text-align: center;
-                background-color:rgba(130, 255, 130, 0.75);
-                border-radius: 20px;
-                max-width: 400px;
-                margin: auto;
-            }
 
-            footer {
-                text-align: center;
-            }
-            img {
-                text-align: center;
-                border-radius: 50%;
-            }
-            p {
-                font-size: 125%;
-            }
-        </style>
-    </head>
-    <body>
-        <div>
-            <h1>Benvenuto!</h1>
-        </div>
-        <div>
-            <img src="immagineProfilo.jpg">
-            <p>Mi chiamo Niko Fanucchi, ho 23 anni e vivo a Capannori (LU).</p>
-            <h2>Sto studiando programmazione web.</h2>
-        </div>
-        <footer>
-            <p>Ultima modifica effettuata il 14/02/2025 alle 17:44</p>
-        </footer>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <title>Pagina HTML di Niko</title>
+    <style>
+        body {
+            background-color: #f4f4f4;
+        }
+
+        div {
+            text-align: center;
+            background-color: rgba(130, 255, 130, 0.75);
+            border-radius: 20px;
+            max-width: 400px;
+            margin: auto;
+        }
+
+        footer {
+            text-align: center;
+        }
+
+        img {
+            text-align: center;
+            border-radius: 50%;
+        }
+
+        p {
+            font-size: 125%;
+        }
+    </style>
+</head>
+
+<body>
+    <div>
+        <h1>Benvenuto!</h1>
+    </div>
+    <div>
+        <img src="immagineProfilo.jpg">
+        <p>Mi chiamo Niko Fanucchi, ho 23 anni e vivo a Capannori (LU).</p>
+        <h2>Sto studiando programmazione web.</h2>
+        <h3><a href="cv.html">Qui c'è il mio Curiculum Vitae.</a></h3>
+    </div>
+    <footer>
+        <p>Ultima modifica effettuata il 17/02/2025 alle 16:46</p>
+    </footer>
+</body>
+
 </html>
