--- a/samuel/index.html
+++ b/samuel/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samuel</title>
+    <title>Document</title>
+    <style>.cv-container {width: 800px;
+        background: white;
+        margin: 30px auto;
+        padding: 20px;
+        border: 2px solid black;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);}</style>
 </head>
 <body>
-    
-</body>
-<h1>Ciao</h1>
-<h2>Ciao sono Samuel </h2>
-<h3>Ciao sto seguendo un corso di programmazione</h3>
-<body style="background-color: lime;"
-">
-
-    
+    <div class="cv-container"></div>
 </body>
 </html>
-<table width="542" align="center" style="background-color: black ;" border="0"><tbody>
-<tr>
-<td width="540" style="background-color: orangered;">Ciao a tutti</td>
-</tr>
-</tbody></table>
