Creata cartella Prova
Provata a creare una pagina carina

--- a/chiara/index.html
+++ b/chiara/index.html
@@ -18,19 +18,21 @@
 
             <a style="color: white" href="index.html">Home</a>
             <a style="color: white" href="Animali.html">Animali</a>
+            <a style="color: white" href="cv.html">CV</a>
 
         </nav>
 
         <hr/>
 
     </header>
-<section>
+
+    <section>
 
     <h1 style="font-family: Arial, Helvetica, sans-serif; text-align: center;">Benvenuti</h1>
     <h3 style="text-align: center;">Questa è la pagina test di Chiara</h3>
     <br/>
-    <img src="Chiara.jpg" alt="Chiara" width="200" height="250">
-    <br/>
+        <img src="Chiara.jpg" alt="Chiara" width="200" height="200" style="display: block; margin-left: auto; margin-right: auto; border-radius: 500px; object-fit: cover;">
+        <br/>
     <br/>
     
 </section>
