--- a/chiara/Animali.html
+++ b/chiara/Animali.html
@@ -19,6 +19,8 @@
         <nav>
             <a href="index.html">Home</a>        
             <a href="Animali.html">Animali</a>
+            <a href="cv.html">CV</a>
+
         </nav>
 
         <hr/>
