--- a/samuel/index.html
+++ b/samuel/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>.cv-container {width: 800px;
-        background: white;
-        margin: 30px auto;
-        padding: 20px;
-        border: 2px solid black;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);}</style>
+    <style>
+        .cv-container {
+            width: 800px;
+            background: white;
+            margin: 30px auto;
+            padding: 10px 10px 10px 10px;
+            border: 2px solid black;
+            box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
+            
+
+        }
+
+        .blocchetto {
+            background-color: lime;
+            width: 80px;
+            height: 80px;
+
+
+
+        }
+
+        .rettangolo {
+            background-color: orangered;
+            width: 400px;
+            height: 80px;
+            display: flex;
+            padding: 10px 10px 10px 90px
+
+
+        }
+    </style>
 </head>
+
 <body>
-    <div class="cv-container"></div>
+    <div class="cv-container">
+        <div class="rettangolo">
+            <div class="blocchetto">
+
+            </div>
+            <p>ciao</p>
+        </div>
+    </div>
 </body>
+
 </html>
