--- a/federico/cv.html
+++ b/federico/cv.html
@@ -10,43 +10,34 @@
             border: 20px solid rgba(255, 0, 0, 0.862);
             border-radius: 10px;
             /* Arrotonda gli angoli */
-           margin-left: 10px;
-           margin-right: 10px;
-           margin-top:25px ;
-           margin-bottom:25px ;
+           margin: 25px 10px;
+           padding: 10px;
         }
-    </style>
-    <style>
-        .certificazioni{
+        .certificazioni h1 {
             border:8px solid black ;
-            border: radius 8px; 
-            margin-top:20px ;
-            margin-bottom:20px ;
-            margin-right:20px ;
-            margin-left:20px ;
+            border-radius: 8px; 
+           margin: 20px;
+           display:inline-block
         }
-        .esperienze{
+        .esperienze h1 {
             border:8px solid black ;
-            border: radius 8px;
-            margin-top:20px ;
-            margin-bottom:20px ;
-            margin-right:20px ;
-            margin-left:20px ;
+            border-radius: 8px;
+           margin: 20px;
+           display:inline-block
         }
-        .aboutme{
+        .aboutme h1 {
             border:8px solid black ;
-            border: radius 8px;
-            margin-top:20px ;
-            margin-bottom:20px ;
-            margin-right:20px ;
-            margin-left:20px ;
+            border-radius: 8px;
+             margin: 20px;
+             display:inline-block
         }
+       
     </style>
 </head>
 
 <body>
     <div class="cornice">
-        <div class="main info">
+        <div class="main-info">
             <h1>Federico <br> Barghini</h1>
             <h2>Web developer</h2>
             <h4>barghiniet@gmail.com cell:3319773737</h4>
@@ -60,6 +51,7 @@
                     dispongo della patente b1,vivo in via ponte strada a Capannori<br>
                     sono una persona creativa ed intraprendente con la capacita di lavorare in gruppo
                 </p>
+                <hr>
             </div>
             <div class="certificazioni">
                 <h1>Certificazioni:</h1>
@@ -67,6 +59,7 @@
                     <li>Diploma istituto professionale giorgi,operatore macchine utensili</li>
                     <li>Attestato partecipazione corso programmare un software da zero lucca talent garden</li>
                 </ul>
+                <hr>
             </div>
            <div class="esperienze ">
         <h1>Esperienze</h1>
@@ -86,6 +79,7 @@
             da giugno 2023 a settembre 2024.
         </li>
         </ul>
+        <hr>
         </div>
 
 
