lavoro su cv.html e style.css

--- a/niko/index.html
+++ b/niko/index.html
@@ -40,7 +40,7 @@
         <img src="immagineProfilo.jpg">
         <p>Mi chiamo Niko Fanucchi, ho 23 anni e vivo a Capannori (LU).</p>
         <h2>Sto studiando programmazione web.</h2>
-        <h3><a href="cv.html">Qui c'è il mio Curiculum Vitae.</a></h3>
+        <h3><a href="cv.html">Qui c'è il mio Curriculum Vitae.</a></h3>
     </div>
     <footer>
         <p>Ultima modifica effettuata il 17/02/2025 alle 16:46</p>
