--- a/niko/cv.html
+++ b/niko/cv.html
@@ -11,7 +11,9 @@
 <body>
     <div class="resume-container">
         <div class="header">
+            <!--<div class="blocchetto">!-->
             <img src="immagineProfilo.jpg" alt="Foto di Niko" class="profile-img">
+            <!--</div>!-->
             <div class="header-text">
                 <h1>NIKO<br>FANUCCHI</h1>
                 <h2>Web Developer</h2>
@@ -46,7 +48,7 @@
                 </ul>
             </section>
             <section class="education">
-                <h3>ISTRUZIONE</h3>
+                <h3>EDUCATION</h3>
                 <p><strong>Design Minor</strong> - University of Pisa (20XX-20XX)</p>
                 <p><strong>Design Major</strong> - University of New Pisa (20XX-20XX)</p>
             </section>
