correzione in classe

--- a/niko/video/index.html
+++ b/niko/video/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iceberg PC Parts</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -26,7 +27,7 @@
     <section class="products">
         <div class="product-grid">
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best CPU">
+                <img src="assets/ram.jpg" class="product-image" alt="Best CPU">
                 <div class="product-info">
                     <h3 class="product-title">CPU's</h3>
                     <p class="product-price">From €27.52</p>
@@ -34,7 +35,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best RAM">
+                <img src="assets/ram.jpg" class="product-image" alt="Best RAM">
                 <div class="product-info">
                     <h3 class="product-title">RAM's</h3>
                     <p class="product-price">From €9.49</p>
@@ -42,7 +43,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Motherboard">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Motherboard">
                 <div class="product-info">
                     <h3 class="product-title">Motherboards</h3>
                     <p class="product-price">From €50.40</p>
@@ -50,7 +51,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best GPU">
+                <img src="assets/ram.jpg" class="product-image" alt="Best GPU">
                 <div class="product-info">
                     <h3 class="product-title">GPU's</h3>
                     <p class="product-price">From €49.30</p>
@@ -58,7 +59,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Storage">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Storage">
                 <div class="product-info">
                     <h3 class="product-title">Storages</h3>
                     <p class="product-price">From €11.99</p>
@@ -66,7 +67,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Case">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Case">
                 <div class="product-info">
                     <h3 class="product-title">Cases</h3>
                     <p class="product-price">From €33.50</p>
@@ -74,7 +75,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Monitor">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Monitor">
                 <div class="product-info">
                     <h3 class="product-title">Monitors</h3>
                     <p class="product-price">From €81.78</p>
@@ -82,7 +83,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Power Supply">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Power Supply">
                 <div class="product-info">
                     <h3 class="product-title">Power Supplies</h3>
                     <p class="product-price">From €23.50</p>
@@ -90,7 +91,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Accessory">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Accessory">
                 <div class="product-info">
                     <h3 class="product-title">Accessories</h3>
                     <p class="product-price">From €3.66</p>
@@ -98,7 +99,7 @@
             </div>
 
             <div class="product-card scroll-animation">
-                <img src="" class="product-image" alt="Best Build">
+                <img src="assets/ram.jpg" class="product-image" alt="Best Build">
                 <div class="product-info">
                     <h3 class="product-title">Builds</h3>
                     <p class="product-price">From €189</p>
