--- a/emanuele/index2.html
+++ b/emanuele/index2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>la pagina di emanuele</title>
     <style>
+
+     Benvenuti nel mio sito/h1>
         .resume-container {
             background: blue;
             width: 800px;
@@ -45,5 +45,7 @@
 </body>
 
 </html>
+
+
 
  
